--- a/src/main/resources/front/styles/index.css
+++ b/src/main/resources/front/styles/index.css
@@ -2,9 +2,11 @@ html,
 body {
   max-width: 750px;
   height: 100%;
-  background: #f3f2f7;
-  font-family: Helvetica;
+  background: #f5f5f7;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   overflow: hidden;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 html,
