--- a/src/main/resources/front/styles/address-edit.css
+++ b/src/main/resources/front/styles/address-edit.css
@@ -31,30 +31,32 @@
 }
 
 #address_edit .divContent {
-  height: 100%;
+  height: calc(100% - 88rem);
   opacity: 1;
   background: #ffffff;
-  padding-left: 9rem;
-  padding-right: 9rem;
+  padding: 20rem 16rem;
+  overflow-y: auto;
+  box-sizing: border-box;
 }
 
 #address_edit .divContent .divItem {
-  height: 55rem;
-  line-height: 55rem;
+  min-height: 55rem;
+  padding: 16rem 0;
   font-size: 14rem;
   font-family: PingFangSC, PingFangSC-Regular;
   font-weight: 500;
   text-align: left;
   color: #333333;
-  line-height: 20rem;
   letter-spacing: 0rem;
   border-bottom: 1px solid #efefef;
   display: flex;
   align-items: center;
+  gap: 12rem;
 }
 
 #address_edit .divContent .divItem .el-input {
-  width: auto;
+  flex: 1;
+  min-width: 0;
 }
 
 #address_edit .divContent .divItem input {
@@ -63,69 +65,89 @@
 }
 
 #address_edit .divContent .divItem .inputUser {
-  width: 150rem;
-}
-
-#address_edit .divContent .divItem span {
-  display: block;
+  flex: 1;
+  min-width: 0;
 }
 
 #address_edit .divContent .divItem span:first-child {
-  margin-right: 12rem;
+  flex-shrink: 0;
   white-space: nowrap;
-  width: 69rem;
-}
-
-#address_edit .divContent .divItem .spanChecked {
-  width: 50rem;
-}
-
-#address_edit .divContent .divItem span i {
-  width: 16rem;
-  height: 16rem;
-  background: url(./../images/checked_false.png);
-  display: inline-block;
-  background-size: cover;
-  vertical-align: sub;
-}
-
-#address_edit .divContent .divItem span .iActive {
-  background: url(./../images/checked_true.png);
-  background-size: cover;
+  width: 100rem;
+  font-size: 14rem;
+  color: #333333;
+  font-weight: 500;
 }
 
 #address_edit .divContent .divItem .spanItem {
-  width: 34rem;
-  height: 20rem;
+  display: inline-block;
+  min-width: 60rem;
+  height: 32rem;
+  line-height: 32rem;
+  padding: 0 16rem;
   opacity: 1;
   border: 1px solid #e5e4e4;
-  border-radius: 3rem;
+  border-radius: 6rem;
   text-align: center;
-  margin-right: 10rem;
-  border-radius: 2px;
+  margin-right: 12rem;
+  margin-top: 0;
+  font-size: 13rem;
   font-family: PingFangSC, PingFangSC-Regular;
   font-weight: 400;
   color: #333333;
+  cursor: pointer;
+  transition: all 0.2s ease;
 }
 
 #address_edit .divContent .divItem .spanActiveCompany {
   background: #e1f1fe;
+  border-color: #4a9eff;
+  color: #4a9eff;
 }
 
 #address_edit .divContent .divItem .spanActiveHome {
   background: #fef8e7;
+  border-color: #ffc200;
+  color: #ffaa00;
 }
 
 #address_edit .divContent .divItem .spanActiveSchool {
   background: #e7fef8;
+  border-color: #4ade80;
+  color: #22c55e;
+}
+
+#address_edit .divContent .divItem.divItemNote {
+  flex-wrap: wrap;
+  align-items: flex-start;
+}
+
+#address_edit .divContent .divItem.divItemNote span:first-child {
+  width: 100rem;
+  margin-bottom: 12rem;
+}
+
+#address_edit .divContent .divItem .noteTags {
+  flex: 1;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12rem;
+  align-items: center;
 }
 
 #address_edit .divContent .divItem .el-input__inner {
-  font-size: 13px;
+  font-size: 14rem;
   font-family: PingFangSC, PingFangSC-Regular;
   font-weight: 400;
   text-align: left;
   color: #333333;
+  padding: 0;
+  border: none;
+  height: auto;
+}
+
+#address_edit .divContent .divItem .el-input__wrapper {
+  padding: 0;
+  box-shadow: none;
 }
 
 #address_edit .divContent .divSave {
