--- a/src/main/resources/front/styles/user.css
+++ b/src/main/resources/front/styles/user.css
@@ -189,19 +189,37 @@
 
 #user .divOrders .result {
   display: flex;
-  justify-content: flex-end;
-  height: 20rem;
-  opacity: 1;
+  justify-content: space-between;
+  align-items: center;
+  padding: 16rem 0;
+  border-top: 1px solid #efefef;
+  margin-top: 8rem;
+}
+
+#user .divOrders .result .resultItem {
+  display: flex;
+  align-items: center;
+  gap: 8rem;
+}
+
+#user .divOrders .result .resultLabel {
   font-size: 14rem;
   font-family: PingFangSC, PingFangSC-Regular;
   font-weight: 400;
-  text-align: left;
   color: #666666;
-  line-height: 20rem;
 }
 
-#user .divOrders .result .price {
-  color: black;
+#user .divOrders .result .resultValue {
+  font-size: 16rem;
+  font-family: PingFangSC, PingFangSC-Regular;
+  font-weight: 500;
+  color: #333333;
+}
+
+#user .divOrders .result .resultValue.price {
+  font-size: 18rem;
+  font-weight: 600;
+  color: #e94e3c;
 }
 
 #user .divOrders .btn {
