--- a/src/main/resources/front/styles/main.css
+++ b/src/main/resources/front/styles/main.css
@@ -356,8 +356,8 @@
   opacity: 1;
   border-radius: 18rem;
   font-size: 15rem;
-  font-family: PingFangSC, PingFangSC-Regular;
-  font-weight: 500;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', PingFangSC, PingFangSC-Regular;
+  font-weight: 600;
   text-align: center;
   line-height: 36rem;
   position: absolute;
