--- a/src/main/resources/backend/styles/page.css
+++ b/src/main/resources/backend/styles/page.css
@@ -46,7 +46,7 @@
   padding-left: 10px;
 }
 
-/* 添加 */
+/* Add */
 .addBrand-container .avatar-uploader .el-upload {
   border: 1px dashed #d9d9d9;
   border-radius: 6px;
