--- a/src/main/resources/front/styles/address-edit.css
+++ b/src/main/resources/front/styles/address-edit.css
@@ -150,6 +150,22 @@
   box-shadow: none;
 }
 
+#address_edit .divContent .divItem .stateSelect {
+  flex: 1;
+  min-width: 0;
+}
+
+#address_edit .divContent .divItem .stateSelect .el-input__inner {
+  font-size: 14rem;
+  font-family: PingFangSC, PingFangSC-Regular;
+  font-weight: 400;
+  text-align: left;
+  color: #333333;
+  padding: 0;
+  border: none;
+  height: auto;
+}
+
 #address_edit .divContent .divSave {
   height: 44rem;
   opacity: 1;
